--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.162",
     "babel-plugin-styled-components": "^1.11.1",
     "node-sass": "^4.14.1"
   }
