--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "faker": "^5.1.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,6 +24,7 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
+    "json-server": "npx json-server --watch api/db.js --port 3004",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.162",
     "babel-plugin-styled-components": "^1.11.1",
+    "json-server": "^0.16.2",
     "node-sass": "^4.14.1"
   }
 }
