--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "json-server": "npx json-server --watch api/db.js --port 3004",
+    "mock": "npx json-server --watch api/db.js --port 3004",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
