--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.2.10",
+    "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
