--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.7",
     "classnames": "^2.2.6",
     "faker": "^5.1.0",
+    "immer": "^8.0.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
